[project]
name = "charmvz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Christian Asch", email = "christian.asch4@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
  "pandas>=2.2.3",
  "pyarrow>=19.0.1",
  "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
